force-app/main/default/objects/Sponsorship_Deliverables__c/Sponsorship_Deliverables__c.object-meta.xml
<CustomObject>
    <description>This object stores the details of our sponsorship benefits tracking system.</description>
    <label>Sponsorship Deliverables</label>
    <nameField>
        <label>Deliverable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sponsorship Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>