force-app/main/default/objects/Sponsorship_Deliverables__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field denotes the internal staff member responsible</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sponsorship_Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>