force-app/main/default/objects/Sponsorship_Deliverables__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>This field denotes the due date of the deliverable to be submitted</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>