force-app/main/default/objects/Sponsorship_Deliverables__c/fields/Proof_of_Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Fulfillment__c</fullName>
    <description>This field denotes a link, screenshot, or notes as evidence of completion.</description>
    <label>Proof of Fulfillment</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>