force-app/main/default/objects/Sponsorship_Deliverables__c/fields/Sponsorship_Level__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Level__c</fullName>
    <formula>TEXT(Opportunity__r.Sponsorship_Level__c)</formula>
    <label>Sponsorship Level</label>
    <type>Text</type>
</CustomField>